@@ -323,4 +323,83 @@ describe('Diagram - inside outside labels', () => {
       });
     });
   });
+
+  context('Given a view with outside label on rectangular node with none strategy', () => {
+    let studioProjectId: string = '';
+    let domainName: string = '';
+
+    before(() => {
+      cy.createProjectFromTemplate('studio-template').then((res) => {
+        const payload = res.body.data.createProjectFromTemplate;
+        if (isCreateProjectFromTemplateSuccessPayload(payload)) {
+          const projectId = payload.project.id;
+          studioProjectId = projectId;
+
+          const project = new Project();
+          project.visit(projectId);
+          project.disableDeletionConfirmationDialog();
+
+          const explorer = new Explorer();
+          explorer.getTreeItemByLabel('DomainNewModel').dblclick();
+          cy.get('[title="domain::Domain"]').then(($div) => {
+            domainName = $div.data().testid;
+            explorer.expand('ViewNewModel');
+            explorer.expand('View');
+            explorer.expand(`${domainName} Diagram Description`);
+            explorer.expand('Entity1 Node');
+            explorer.delete('aql:self.name');
+            explorer.createObject('Entity1 Node', 'Outside Label Description');
+          });
+        }
+      });
+    });
+
+    after(() => cy.deleteProject(studioProjectId));
+    context('When we create a new instance project', () => {
+      let instanceProjectId: string = '';
+
+      beforeEach(() => {
+        const studio = new Studio();
+        studio.createProjectFromDomain('Cypress - Studio Instance', domainName, 'Root').then((res) => {
+          instanceProjectId = res.projectId;
+
+          new Explorer().createRepresentation('Root', `${domainName} Diagram Description`, 'diagram');
+        });
+      });
+
+      afterEach(() => cy.deleteProject(instanceProjectId));
+
+      it('Then the outside label is not truncated', () => {
+        const explorer = new Explorer();
+        const diagram = new Diagram();
+        const details = new Details();
+        explorer.createObject('Root', 'Entity1s Entity1');
+        details.getTextField('Name').type('small{enter}');
+        diagram.fitToScreen();
+        let initialWidth: number;
+        let initialHeight: number;
+        diagram.getDiagramScale('diagram').then((scale) => {
+          diagram.getNodeCssValue('diagram', 'small', 'width').then((nodeWidth) => {
+            initialWidth = nodeWidth / scale;
+          });
+          diagram.getNodeCssValue('diagram', 'small', 'height').then((nodeHeight) => {
+            initialHeight = nodeHeight / scale;
+          });
+        });
+        details.getTextField('Name').type('{selectAll}very large label without wrap{enter}');
+        diagram.getDiagramScale('diagram').then((scale) => {
+          diagram.getNodeCssValue('diagram', 'very large label without wrap', 'width').then((nodeWidth) => {
+            expect(nodeWidth / scale).to.approximately(initialWidth, 2);
+          });
+          diagram.getNodeCssValue('diagram', 'very large label without wrap', 'height').then((nodeHeight) => {
+            expect(nodeHeight / scale).to.approximately(initialHeight, 2);
+          });
+        });
+        diagram.getLabel('very large label without wrap').should('exist');
+        details.getTextField('Name').type('{selectAll}very large label {shift}{enter}with wrap');
+        details.getTextField('Name').type('{enter}');
+        diagram.getLabel('very large label \nwith wrap').should('exist');
+      });
+    });
+  });
 });
